<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/contacts_app"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivPerson"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/person"
        app:srcCompat="@drawable/girl" />

    <ImageView
        android:id="@+id/ivCall"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/call"
        app:srcCompat="@drawable/call" />

    <ImageView
        android:id="@+id/ivWeb"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/website"
        app:srcCompat="@drawable/web" />

    <ImageView
        android:id="@+id/ivMap"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/address"
        app:srcCompat="@drawable/location" />

    <Button
        android:id="@+id/btnCreateContact"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/create_contact" />
</LinearLayout>