<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:autofillHints="name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_phone_number"
        android:autofillHints="phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etWeb"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_website"
        android:autofillHints="website"
        android:inputType="text" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_address"
        android:autofillHints="address"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivMan"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/man"
            app:srcCompat="@drawable/man" />

        <ImageView
            android:id="@+id/ivWoman"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/woman"
            app:srcCompat="@drawable/woman" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBoi"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/boy"
            app:srcCompat="@drawable/boi" />

        <ImageView
            android:id="@+id/ivGirl"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/girl"
            app:srcCompat="@drawable/girl" />
    </LinearLayout>
</LinearLayout>